# studia

./: .gitignore  clear_jupiter.py  stripout.ps1
files/: CMakeLists.txt
files/1/: CMakeLists.txt  main.c
files/2/: main.c
files/21/: main.c
files/23/: CMakeLists.txt  main.c
files/3/: main.c
files/4/: main.c
files/utils_lib/: CMakeLists.txt  library.h  utils_lib.h
files/zad_1/: main.c
files/zad_2/: main.c
sem2/pp2/: readme.MD
sem2/pp2/bit_op/: CMakeLists.txt
sem2/pp2/bit_op/bit_swap/: CMakeLists.txt  desc.txt  main.c
sem2/pp2/bit_op/compare/: CMakeLists.txt  desc.txt  main.c
sem2/pp2/bit_op/macros_bits/: CMakeLists.txt  desc.txt  functions.h  macros_bits  main.c
sem2/pp2/bit_op/macros_structs/: CMakeLists.txt  desc.txt  functions.h  main.c
sem2/pp2/bit_op/negate_all/: CMakeLists.txt  desc.txt  main.c
sem2/pp2/bit_op/on_off_switch/: CMakeLists.txt  desc.txt  main.c
sem2/pp2/data_structures/: CMakeLists.txt
sem2/pp2/data_structures/calculator_stack/: CMakeLists.txt  desc.txt  main.c  stack.c  stack.h  tmp_input.txt
sem2/pp2/data_structures/doubly_linked_list/: CMakeLists.txt  desc.txt  doubly_linked_list.c  doubly_linked_list.h  main.c
sem2/pp2/data_structures/dynamic_stack/: CMakeLists.txt  desc.txt  main.c  stack.h
sem2/pp2/data_structures/one_way_list/: CMakeLists.txt  desc.txt  linked_list.c  linked_list.h  main.c
sem2/pp2/data_structures/reversed_stack/: CMakeLists.txt  desc.txt  main.c  stack.c  stack.h  test1.txt  test2.txt  test3.txt
sem2/pp2/data_structures/simple_stack/: CMakeLists.txt  desc.txt  stack.c  stack.h
sem2/pp2/files/: CMakeLists.txt  readme.MD
sem2/pp2/files/1/: main.c
sem2/pp2/files/2/: CMakeLists.txt
sem2/pp2/files/21/: CMakeLists.txt
sem2/pp2/files/5/: main.c
sem2/pp2/files/7/: main.c
sem2/pp2/files/utils_lib/: CMakeLists.txt  utils_lib.c
sem2/pp2/function_pointers/: CMakeLists.txt
sem2/pp2/function_pointers/fp_param/: CMakeLists.txt  int_operations.h
sem2/pp2/function_pointers/fp_returned/: CMakeLists.txt  int_operations.h  main.c
sem2/pp2/function_pointers/fp_struct/: CMakeLists.txt  complex_operations.c  complex_operations.h  desc.txt  float_operations.c  float_operations.h  int_operations.c  int_operations.h  main.c  operations.c  operations.h
sem2/pp2/function_pointers/moving_point/: CMakeLists.txt  board.c  board.h  desc.txt  main.c
sem2/pp2/function_pointers/sort/: CMakeLists.txt  comparators.c  comparators.h  desc.txt  main.c
sem2/pp2/function_pointers/text_mod/: CMakeLists.txt  char_operations.c  char_operations.h  desc.txt  main.c
sem2/pp2/malloc/: CMakeLists.txt  README.md
sem2/pp2/malloc/allocate_function/: CMakeLists.txt  main.c
sem2/pp2/malloc/allocate_function_II/: CMakeLists.txt  main.c
sem2/pp2/malloc/allovarone/: CMakeLists.txt  main.c
sem2/pp2/malloc/copy_print/: CMakeLists.txt  main.c
sem2/pp2/malloc/cyclic_buffer/: CMakeLists.txt  circular_buffer.c  circular_buffer.h  main.c  readme.MD
sem2/pp2/malloc/fill/: CMakeLists.txt  main.c
sem2/pp2/malloc/safe_array/: CMakeLists.txt  README.md  array.c  array.h  main.c
sem2/pp2/malloc/safe_array_II/: CMakeLists.txt  README.md  array.c  array.h  main.c
sem2/pp2/malloc/utils/: utils.c  utils.h
sem2/pp2/malloc/vector/: CMakeLists.txt  README.md  main.c  vector.c  vector.h
sem2/pp2/malloc_II/: CMakeLists.txt  README.md
sem2/pp2/malloc_II/array_2d/: CMakeLists.txt  README.md  main.c
sem2/pp2/malloc_II/array_2d_II/: CMakeLists.txt  main.c
sem2/pp2/malloc_II/img_in_img/: CMakeLists.txt  README.md  desc.txt  image_utils.c  image_utils.h  main.c
sem2/pp2/malloc_II/matrix/: CMakeLists.txt  main.c
sem2/pp2/malloc_II/matrix_II/: CMakeLists.txt  desc.txt  main.c  matrix_utils.c  matrix_utils.h
sem2/pp2/malloc_II/matrix_files/: CMakeLists.txt  desc.txt  main.c  matrix_utils.c  matrix_utils.h
sem2/pp2/malloc_II/matrix_ops/: CMakeLists.txt  app  desc.txt  flat.txt  main.c  matrix_utils.c  matrix_utils.h  space.txt
sem2/pp2/malloc_II/mirror_image/: CMakeLists.txt  desc.txt  image_utils.c  image_utils.h  main.c
sem2/pp2/malloc_II/multiplication/: CMakeLists.txt  README.md  main.c
sem2/pp2/malloc_II/rectangle/: CMakeLists.txt  desc.txt  image_utils.c  image_utils.h  main.c
sem2/pp2/malloc_II/statistics/: CMakeLists.txt  README.md  desc.txt  format_type.h  main.c
sem2/pp2/malloc_strings/: CMakeLists.txt
sem2/pp2/malloc_strings/ariadna/: CMakeLists.txt  main.c
sem2/pp2/malloc_strings/big_numbers/: CMakeLists.txt  main.c
sem2/pp2/malloc_strings/cross_word/: CMakeLists.txt  main.c  problem_description.txt  test_driver.c  xd.txt
sem2/pp2/malloc_strings/dictionary/: desc.txt  dictionary.c  dictionary.h  main.c
sem2/pp2/malloc_strings/dictionary_sort/: desc.txt  dictionary.c  dictionary.h  main.c
sem2/pp2/malloc_strings/more_texts/: CMakeLists.txt  desc.txt  main.c
sem2/pp2/structs/: CMakeLists.txt  README.md
sem2/pp2/structs/1/: CMakeLists.txt
sem2/pp2/structs/18/: CMakeLists.txt  main.c
sem2/pp2/structs/20/: CMakeLists.txt  main.c
sem2/pp2/structs/file_struct/: CMakeLists.txt  main.c
sem2/pp2/structs/hidden_message_II/: CMakeLists.txt  main.c  readme.MD  test.c  test.txt
sem2/pp2/structs/phone_book/: CMakeLists.txt  ex15.md  main.c
sem2/pp2/structs/phone_book_II/: CMakeLists.txt  main.c  readme.md
sem2/pp2/structs/point/: CMakeLists.txt  main.c
sem2/pp2/structs/struct_utils/: struct_utils.c  struct_utils.h
sem2/pp2/structs/student_record/: CMakeLists.txt  main.c  readme.MD
sem2/pp2/structs/test/: main.c
sem2/pp2/structs/utils/: CMakeLists.txt  main.c  main.h
sem2/pp2/tests/: CMakeLists.txt
sem2/pp2/tests/count/: README.md  defs.c  defs.h  main.c
sem2/pp2/tests/translate/: CMakeLists.txt  main.c  test.c  translator.c  translator.h
sem2/pp2/tests/utils/: utils.c  utils.h
sem2/pp2/union/: CMakeLists.txt  README.md
sem2/pp2/union/bit_parity/: CMakeLists.txt  README.md  bit_parity.h  main.c
sem2/pp2/union/bitmap/: CMakeLists.txt  README.md  bit_set.h  main.c
sem2/pp2/var_arg/: CMakeLists.txt
sem3/po1/fz/: CMakeLists.txt
sem3/po1/lab6/: CMakeLists.txt
(+759 files in other folders)
